# screen-times

./: .gitignore  .pre-commit-config.yaml  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Pipfile  README.md  RELEASING.md  com.screenocr.logger.plist  pyproject.toml  requirements.txt  setup.cfg  setup_launchd.sh
.claude/: settings.json
.claude/skills/analyze-screen-ocr/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  publish-test.yml  publish.yml
config/: com.screenocr.logger.plist
docs/: commands.md  performance.md  security.md  troubleshooting.md
scripts/: analyze_logs.py  install_cli.sh  jsonl_manager.py  screen_ocr_logger.py  screenocr_cli.py  screenshot_ocr.py  setup_launchd.sh  split_jsonl.py  test_ocr.py
src/screen_times/: cli.py  electron_classifier.py  jsonl_manager.py  ocr.py  screen_ocr_logger.py  screenshot.py  screenshot_ocr.py  split_jsonl.py
tests/: test_electron_classifier.py  test_jsonl.py  test_jsonl_manager.py  test_ocr.py  test_screen_ocr_logger.py  test_screenshot.py
