[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "screenocr-logger"
version = "0.1.0"
description = "macOS screen OCR logger using Vision Framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Kobori Akira", email = "akira@example.com"}
]

dependencies = [
    "pyobjc-framework-Cocoa>=12.0",
    "pyobjc-framework-Vision>=12.0",
    "pyobjc-framework-Quartz>=12.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
screen_times = ["resources/*.applescript"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
